# uniffi-rs-issue-example

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: lib.rs  rsl.udl
